--- a/app/src/main/res/layout/raw_dr_skil_choice.xml
+++ b/app/src/main/res/layout/raw_dr_skil_choice.xml
@@ -6,11 +6,12 @@
     android:background="#131D55"
     android:orientation="vertical">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="vertical">
-    <LinearLayout
+        <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -96,6 +97,9 @@
         </RelativeLayout>
     </LinearLayout>
 
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FAF9F9"/>
 
 </LinearLayout>
