--- a/app/src/main/res/layout/activity_dr_register.xml
+++ b/app/src/main/res/layout/activity_dr_register.xml
@@ -52,6 +52,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:ems="10"
+            android:maxLines="1"
+            android:textColor="@color/white"
             android:hint="Login" />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -71,6 +73,9 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:ems="10"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:hint="Mot de Passe" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,6 +97,9 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:ems="10"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:hint="Nom du Cabinet" />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -111,6 +119,9 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:ems="10"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:hint="Adresse" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -133,6 +144,9 @@
             android:layout_centerVertical="true"
             android:ems="10"
             android:layout_marginBottom="10dp"
+            android:textColor="@color/white"
+            android:maxLines="1"
+            android:textColorHint="@color/white"
             android:hint="Tél" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -153,7 +167,7 @@
             android:id="@+id/spiner_dr_skills"
             android:layout_height="40dp"
             android:layout_width="160dp"
-            android:textColorHint="@color/design_default_color_on_primary"
+            android:textColor="@color/white"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
@@ -277,9 +291,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Les vacances : "
+            android:gravity="center"
             android:textColor="@color/white"
-            android:layout_marginRight="80dp"
-            android:gravity="center"/>
+            android:layout_marginRight="110dp"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
