--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -24,7 +24,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RE HERCHE "
+            android:text="RECHERCHE "
             android:layout_gravity="center"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -44,7 +44,7 @@
         app:cardCornerRadius="44dp">
 
         <Spinner
-            android:id="@+id/spiner_search_dr_skills"
+            android:id="@+id/activity_spinner_search_dr_skills"
             android:layout_height="40dp"
             android:layout_width="160dp"
             android:textColorHint="@color/design_default_color_on_primary"
@@ -55,7 +55,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <EditText
-        android:id="@+id/search_dr_name"
+        android:id="@+id/activity_search_edit_dr_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nom Complet"
@@ -70,11 +70,11 @@
         android:orientation="horizontal">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="150dp"
+            android:layout_width="190dp"
             android:theme="@style/Theme.MaterialComponents.Light"
             android:layout_height="40dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginRight="10dp"
             app:strokeColor="#11FD15"
             android:backgroundTint="#131D55"
             android:layout_marginTop="40dp"
@@ -82,9 +82,9 @@
             app:cardCornerRadius="44dp">
 
             <Spinner
-                android:id="@+id/spiner_search_city"
+                android:id="@+id/activity_spinner_search_city"
                 android:layout_height="40dp"
-                android:layout_width="160dp"
+                android:layout_width="190dp"
                 android:textColorHint="@color/design_default_color_on_primary"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
@@ -92,11 +92,11 @@
                 android:layout_marginTop="10dp" />
         </com.google.android.material.card.MaterialCardView>
 
-        <com.google.android.material.card.MaterialCardView
+      <!--  <com.google.android.material.card.MaterialCardView
             android:layout_width="150dp"
             android:theme="@style/Theme.MaterialComponents.Light"
             android:layout_height="40dp"
-            android:layout_marginLeft="7dp"
+            android:layout_marginLeft="2dp"
             android:layout_marginRight="40dp"
             app:strokeColor="#11FD15"
             android:backgroundTint="#131D55"
@@ -113,12 +113,12 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp" />
-        </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>-->
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnSearch"
+        android:id="@+id/activity_btnSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
@@ -126,6 +126,7 @@
         android:layout_marginRight="40dp"
         android:text="SEARCH"
         android:backgroundTint="#11FD15"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -133,9 +134,9 @@
         android:orientation="horizontal">
 
         <CheckBox
+            android:id="@+id/activity_checkbox_search"
             android:layout_width="40dp"
             android:layout_height="40dp"/>
-
 
         <TextView
             android:layout_width="100dp"
@@ -157,7 +158,7 @@
         android:background="#C3C3C3"
         android:orientation="vertical">
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewEmergency"
+        android:id="@+id/recyclerViewToDisplaySearchingListByParameters"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
