--- a/app/src/main/res/layout/activity_detail_dr_register.xml
+++ b/app/src/main/res/layout/activity_detail_dr_register.xml
@@ -33,7 +33,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
@@ -47,7 +47,7 @@
                 android:text="Dr."
                 android:textSize="16sp"
                 android:textColor="#11FD15" />
-            <TextView
+            <EditText
                 android:id="@+id/desc_office_name"
                 android:layout_width="190dp"
                 android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
@@ -81,7 +81,7 @@
         android:text="Spécialité:"
         android:textColor="@color/white" />
 
-    <TextView
+    <EditText
         android:id="@+id/desc_skill"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
@@ -89,14 +89,14 @@
         android:layout_centerVertical="true"
         android:layout_marginTop="10dp"
         android:layout_marginRight="40dp"
-        android:ems="10"
+        android:textSize="12dp"
         android:text="Chirurgien"
         android:textColor="#11FD15" />
 </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -111,7 +111,7 @@
                 android:text="Heure d'ouverture:"
                 android:textColor="@color/white" />
 
-            <TextView
+            <EditText
                 android:id="@+id/desc_office_open"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -119,14 +119,14 @@
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="40dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="09:10"
                 android:textColor="#11FD15" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -141,7 +141,7 @@
                 android:text="Heure de fermeture:"
                 android:textColor="@color/white" />
 
-            <TextView
+            <EditText
                 android:id="@+id/desc_office_close"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -149,14 +149,14 @@
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="40dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="18:20"
                 android:textColor="#11FD15" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -171,23 +171,23 @@
                 android:text="Début de vacances:"
                 android:textColor="@color/white" />
 
-            <TextView
+            <EditText
                 android:id="@+id/desc_holiday_start"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
-                android:textStyle="bold"
                 android:layout_marginRight="40dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="01/06/12"
-                android:textColor="#11FD15" />
+                android:textColor="#11FD15"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -202,7 +202,7 @@
                 android:text="Fin de vacances:"
                 android:textColor="@color/white" />
 
-            <TextView
+            <EditText
                 android:id="@+id/desc_holiday_close"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -210,7 +210,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="40dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:textStyle="bold"
                 android:text="01/08/12"
                 android:textColor="#11FD15" />
@@ -218,7 +218,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -237,7 +237,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -248,7 +248,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="10dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="De"
                 android:textColor="@color/white" />
             <TextView
@@ -257,7 +257,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="Samedi"
                 android:textStyle="bold"
                 android:textColor="#11FD15" />
@@ -268,7 +268,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="jusqu'à"
                 android:textColor="@color/white" />
             <TextView
@@ -278,7 +278,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="10dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:textStyle="bold"
                 android:text="Samedi"
                 android:textColor="#11FD15" />
@@ -286,7 +286,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -301,7 +301,7 @@
                 android:text="Adresse:"
                 android:textColor="@color/white" />
 
-            <TextView
+            <EditText
                 android:id="@+id/desc_adress"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -309,7 +309,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="40dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:textStyle="bold"
                 android:text="Adresse"
                 android:textColor="#11FD15" />
@@ -317,7 +317,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -328,11 +328,11 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="10dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="Commune:"
                 android:textColor="@color/white" />
 
-            <TextView
+            <EditText
                 android:id="@+id/desc_city"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -340,7 +340,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="40dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:textStyle="bold"
                 android:text="Commune"
                 android:textColor="#11FD15" />
@@ -348,7 +348,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -359,11 +359,11 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="10dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:text="Numéro de téléphone:"
                 android:textColor="@color/white" />
 
-            <TextView
+            <EditText
                 android:id="@+id/desc_phone"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -371,26 +371,32 @@
                 android:layout_centerVertical="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="40dp"
-                android:ems="10"
+                android:textSize="12dp"
                 android:inputType="phone"
                 android:textStyle="bold"
-                android:text="Phone"
+                android:text="9990"
                 android:textColor="#11FD15" />
         </LinearLayout>
 
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:theme="@style/Theme.MaterialComponents.Light"
-            android:layout_height="40dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginTop="20dp"
-            app:strokeColor="#11FD15"
-            android:backgroundTint="#131D55"
-            android:layout_marginBottom="10dp"
-            app:strokeWidth="1dp"
-            app:cardCornerRadius="44dp">
+       <Button
+           android:id="@+id/btn_detail_update_register"
+           android:layout_width="130dp"
+           android:layout_height="40dp"
+           android:text="Update"
+           android:layout_gravity="center"
+           android:textSize="10dp"
+           android:backgroundTint="#62BF23"/>
 
-        </com.google.android.material.card.MaterialCardView>
+
+    <Button
+        android:id="@+id/btn_detail_update_cancel"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:text="Annuler"
+        android:layout_gravity="center"
+        android:textSize="10dp"
+        android:backgroundTint="#62BF23"/>
+
+
     </LinearLayout>
